[layer_010] colors roff

--- a/layer_010/yasuo-chgrp.1
+++ b/layer_010/yasuo-chgrp.1
@@ -1,10 +1,10 @@
 .TH CHGRP 1 "21 марта 2019" "GNU coreutils 8.30"
 
 .SH НАЗВАНИЕ
-chgrp \- изменить группу пользователей, владеющих файлом
+\m[red]chgrp\m[] \- изменить группу пользователей, владеющих файлом
 
 .SH СИНТАКСИС
-\fBchgrp\fP [OPTION]... GROUP FILE...
+\fBchgrp\fP \M[green]\m[black][OPTION]...\m[]\M[] GROUP FILE...
 \fBchgrp\fP [OPTION]... --reference=RFILE FILE...
 
 .SH ОПИСАНИЕ
