[refactor] old .tex fixes

--- a/spl/layer_perl/layer_perl.tex
+++ b/spl/layer_perl/layer_perl.tex
@@ -59,6 +59,6 @@
   \item число, возможно, дробное (с десятичной точкой) - \verb|\d+(\.\d+)?|
   \item любая буква, за которой следует гласная, повторяется еще раз
     (пример: "pop", "fifth", "daddy") - \verb|([A-Za-z])[aioueAIOUE]\1|
-  \item хотя бы один \verb|"+" - \verb|\++|
+  \item хотя бы один \verb|"+"| - \verb|\++|
 \end{itemize}
 \end{document}
