--- a/spl/layer_110/layer_110.tex
+++ b/spl/layer_110/layer_110.tex
@@ -66,7 +66,7 @@
       \item Подсчитывает средний вклад за каждый месяц и выводит результаты округлённо до второго знака после запятой
       \item В конце вывести текущее время и результат выполнения команды ls
     \end{enumerate}
-    \lstinputlisting{task.awk}
+    %\lstinputlisting{task.awk}
 \end{enumerate}
 \section*{Второе задание}
 \begin{enumerate}
